samples/_failures_safe/1761800005_5f149b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec8a3d36.c: In function ‘pointcloud_compute_bounds’:
./samples/SAFE/__tmp_ec8a3d36.c:124:5: error: expected declaration or statement at end of input
  124 |     bounds.min.x = pc->points[0].x;
      |     ^~~~~~
